--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.7.4",
+    "@react-spring/web": "^9.7.4",
+    "@react-three/cannon": "^6.6.0",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
+    "@react-three/rapier": "^1.4.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
+    "@types/three": "^0.166.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-animated-cursor": "^2.11.2",
+    "react-dom": "^18",
+    "three": "^0.166.1"
   },
   "devDependencies": {
     "sass": "^1.77.8"
