--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "@types/three": "^0.166.0",
+    "@use-gesture/react": "^10.3.1",
     "next": "14.2.5",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
