--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@supabase/supabase-js": "^2.44.4",
     "@types/three": "^0.166.0",
     "@use-gesture/react": "^10.3.1",
+    "maath": "^0.10.8",
     "next": "14.2.5",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "valtio": "^2.0.0"
   },
   "devDependencies": {
     "sass": "^1.77.8"
