--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@supabase/supabase-js": "^2.44.4",
     "@types/three": "^0.166.0",
     "@use-gesture/react": "^10.3.1",
+    "embla-carousel": "^8.3.0",
+    "embla-carousel-react": "^8.3.0",
     "maath": "^0.10.8",
     "next": "14.2.5",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
+    "swiper": "^11.1.14",
     "three": "^0.166.1",
     "valtio": "^2.0.0"
   },
