--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "maath": "^0.10.8",
-    "next": "14.2.5",
+    "next": "^14.2.14",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
