--- a/package.json
+++ b/package.json
@@ -9,27 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/three": "^9.7.4",
-    "@react-spring/web": "^9.7.4",
     "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.109.2",
-    "@react-three/fiber": "^8.16.8",
-    "@react-three/postprocessing": "^2.16.2",
-    "@react-three/rapier": "^1.4.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
+    "@react-three/rapier": "^2.2.0",
     "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.44.4",
     "@types/three": "^0.166.0",
     "@use-gesture/react": "^10.3.1",
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "eslint-config-next": "^15.5.3",
     "maath": "^0.10.8",
-    "next": "^14.2.14",
+    "next": "^16.1.1",
     "nextjs-toploader": "^3.6.15",
-    "react": "^18",
-    "react-animated-cursor": "^2.11.2",
-    "react-dom": "^18",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "swiper": "^11.1.14",
-    "three": "^0.166.1",
+    "three": "^0.182.0",
     "valtio": "^2.0.0"
   },
   "devDependencies": {
