--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "maath": "^0.10.8",
     "next": "^16.1.1",
     "nextjs-toploader": "^3.6.15",
+    "ogl": "^1.0.11",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "swiper": "^11.1.14",
